Fix: Fix alignment of input labels in Safari/Firefox (resolves #51)

--- a/translatr/public/stylesheets/main.css
+++ b/translatr/public/stylesheets/main.css
@@ -709,3 +709,9 @@ textarea.materialize-textarea {
 i.xlarge {
 	font-size: 9em;
 }
+
+/* Fixes */
+/* Safari + Firefox */
+.input-field label {
+	left: 0;
+}
